src/test/ui/const-generics/issues/issue-61747.min.stderr
error: generic parameters must not be used inside of non trivial constant values
  --> $DIR/issue-61747.rs:8:30
   |
LL |     fn successor() -> Const<{C + 1}> {
   |                              ^ non-trivial anonymous constants must not depend on the parameter `C`
   |
   = help: it is currently only allowed to use either `C` or `{ C }` as generic constants

error: aborting due to previous error

